deploy/manifests/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: awscost
  name: awscost
spec:
  replicas: 2
  selector:
    matchLabels:
      app: awscost
  template:
    metadata:
      labels:
        app: awscost
    spec:
      serviceAccountName: awscost
      containers:
      - name: awscost
        image: jordiprats/awscost:1.6
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 256Mi
        ports:
          - name: http
            containerPort: 8080
            protocol: TCP
        startupProbe:
          failureThreshold: 3
          httpGet:
            path: /favicon.ico
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /favicon.ico
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
