deploy/manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: awscost
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: awscost
